@@ -79,6 +79,8 @@ Application Changes:
 - Extended versions of Detection spells that are explicitly allowed by RAW no longer erroneously have drain codes of 2 higher than normal.
 - Picking an exotic skill as a skill in which to get free levels from a Priority selection now works properly and adds the selected exotic skill to the character's skill list at the specified level.
 - Improvements that alter the number of power points available to a character now properly cause power point totals in the Adept Powers tab to be updated with new values. This includes metamagics that add power points.
+- When Chummer is opened, it now tries to automatically detect if there is an autosave for a character that could have been an unsaved character otherwise lost by Chummer crashing or exiting unsafely. If it finds such an autosave, it prompts the user if they want to load said autosave.
+- Chummer now attempts to delete all autosaves older than 90 days that are not linked to any Favorite or Most Recently Used character.
 
 Data Changes:
 - Consolidated all German Data Changes custom data and all German-exclusive content of sourcebooks printed in English into a single German Data Changes c.ustom data folder.
@@ -216,6 +218,7 @@ Changed/New Strings:
 - Button_Reconnect
 - Message_UnboundSpiritLimit
 - MessageTitle_UnboundSpiritLimit
+- Message_PossibleCrashAutosaveFound
 
 Build 214
 Application Fixes:
